# ledger-app-factom

./: .gitignore  Makefile  README.md
doc/: fctapp.asc
ledger-factomjs/: README.md  package.json
ledger-factomjs/src/: index-browserify.js  index.js  ledger-factom.js
ledger-factomjs/test/: FctDisplayPublicAddress.js  FctGetPublicAddress.js  FctSignTransaction.js  testEc2.js  testFct3.js  tests-node.js
src/: PegnetParse.c  PegnetParse.h  btchip_base58.c  btchip_base58.h  btchip_rom_variables.c  btchip_rom_variables.h  ccParse.c  ccParse.h  ecParse.c  ecParse.h  ethUstream.c  fatParse.c  fatParse.h  fctParse.c  fctParse.h  fctUtils.c  fctUtils.h  glyphs.c  glyphs.h  jsmn.h  main.c  main.c.compiled  main.c.notcompiled  u2f_io.c  u2f_processing.c  u2f_transport.c  u2f_transport.h  ui_address_nanos.h  ui_approval_nanos.h  uint256.c
test/: CMakeLists.txt  getPublicKey.py  main.c  surrogate.c
